chore: ajustes para instalação do projeto com JDK 23.